// Produced by Acceleo JavaScript Generator 1.1.0
import "../ccsds_mal/types.proto";



package lifeCycle.protobuf;

message LifeCycleStatus {
extensions 3 to 103;

  optional ccsds_mal.protobuf.ULONG status = 1;
  optional ccsds_mal.protobuf.TIME statusTime = 2;
}
